--- a/Practice/style.css
+++ b/Practice/style.css
@@ -8,12 +8,13 @@
     transition: all 100ms ease-in;
 }
 body{
-    background-color: black;
+    background-color:aquamarine;
     overflow: hidden;
     height: 100vh;
 }
 .msg{
     width: 100%;
+    text-shadow: 5px 4px 4px black;
     font-weight: bolder;
     color: crimson;
     text-align: center;
